Implemented the correct type for the stock and the line of play